syntax = "proto3";
package pb;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotation.proto";
import "include/graphql.proto";

service UserProfileService {
    // gRPC service information
    // gRPC service information
    option (graphql.service) = {
       host: "localhost:8080"
       insecure: true
      };

    rpc CreateUserProfile(CreateUserProfileRequest) returns (UserProfile){
        option (google.api.http) = {
           post: "/v1/user-profile/create-user-profile"
           body: "*"
          };
        option (graphql.schema) = {
            type: MUTATION   // decleare as Mutation
            name: "createUserProfile" // query name
            };
    };
    rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UserProfile){
        option (google.api.http) = {
            put: "/v1/user-profile/update-user-profile"
            body: "*"
             };
        option (graphql.schema) = {
            type: MUTATION   // decleare as Mutation
            name: "updateUserProfile" // query name
            };
    }
    rpc GetUserProfile(GetUserProfileRequest) returns (UserProfile){
        option (google.api.http) = {
           get: "/v1/user-profile/get-user-profile/{id}"
        };
        option (graphql.schema) = {
             type: QUERY   // decleare as Mutation
             name: "user" // query name
            };
    }
    rpc DeleteUserProfile(DeleteUserProfileRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
          delete: "/v1/user-profile/delete-user-profile/{id}"
          };
        option (graphql.schema) = {
             type: QUERY   // decleare as query
             name: "deleteUserProfile" // query name
            };
    }
}

message CreateUserProfileRequest {
    UserProfile user_profile = 1;
}

message DeleteUserProfileRequest {
    string id = 1;
}

message UpdateUserProfileRequest {
    UserProfile user_profile = 1;
}

message GetUserProfileRequest {
    string id = 1;
}

message UserProfile {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
    SOURCE source = 5;
    google.protobuf.Timestamp created_on = 6;
    google.protobuf.Timestamp updated_on = 7;
    google.protobuf.Timestamp deleted_on = 8;
    string user_id = 9;

}

enum SOURCE {
    UNKNOWN = 0;
    GITHUB = 1;
    GITLAB = 2;
    BITBUCKET = 3;
    EMAIL_PASSWORD = 4;
}
